# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import propertiesRouter from "./properties";
+import bookingsRouter from "./bookings";
+import dashboardRouter from "./dashboard";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(propertiesRouter);
+router.use(bookingsRouter);
+router.use(dashboardRouter);
 
 export default router;
